# VulkanRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
include/: DeletionQueue.h  DescSetBuilder.h  DescriptorSet.h  Editor.h  Engine.h  EngineTypes.h  Image.h  Log.h  Mesh.h  PipelineBuilder.h  RenderTypes.h  RenderableTypes.h  Renderer.h  ResourceManager.h  VulkanInit.h  VulkanTypes.h  VulkanUtil.h
include/Graphics/: Common.h  DescriptorSet.h  PipelineBuilder.h  RenderTypes.h  Renderer.h  ResourceManager.h  VulkanCommon.h  VulkanInit.h
include/Structures/: Slotmap.h
src/: DeletionQueue.cpp  DescSetBuilder.cpp  DescriptorSet.cpp  Editor.cpp  Engine.cpp  Image.cpp  Log.cpp  Mesh.cpp  PipelineBuilder.cpp  RenderableTypes.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  VulkanInit.cpp  VulkanUtil.cpp  main.cpp
src/Graphics/: DescriptorSet.cpp  Mesh.cpp  PipelineBuilder.cpp  Renderer.cpp  ResourceManager.cpp  VulkanInit.cpp
src/Structures/: Slotmap.cpp
